# metac-bot-ruslanbot

./: README.md  api_json.json  main.py  pyproject.toml
forecasting-tools/: .env.template  .gitignore  .pre-commit-config.yaml  README.ipynb  README.md  _typos.toml  conftest.py  pyproject.toml  pytest.ini  run_bots.py
forecasting-tools/.cursor/rules/: code-tests.mdc  general-guidelines.mdc
forecasting-tools/.devcontainer/: devcontainer.json  postinstall.sh  set_up_git_ssh.md  set_up_python.md
forecasting-tools/.github/scripts/: basic_test_proxy.py  precache_asknews.py  pyproject.public-template-bot.toml  stress_test_proxy.py  test_public_template_bot.py
forecasting-tools/.github/workflows/: basic-test-proxy.yaml  public-template-bot-test.yaml  run-bot-aib-tournament.yaml  run-bot-launcher.yaml  stress-test_proxy.yaml  unit-tests.yaml
forecasting-tools/code_tests/integration_tests/: test_adjacent_news_api.py  test_asknews.py  test_base_rate_responder.py  test_benchmarker.py  test_bot_optimizer.py  test_coherence_links.py  test_customizable_bot_live.py  test_deduplicator.py  test_forecast_bots_live.py  test_forecast_database_manager.py  test_metaculus_api.py  test_run_chat_app_tools__moderately_expensive.py  test_smart_searcher.py  test_structure_output.py
forecasting-tools/code_tests/unit_tests/: forecasting_test_manager.py  test_public_api.py  test_run_bots.py
forecasting-tools/code_tests/utilities_for_tests/: coroutine_testing.py  jsonable_assertations.py  misc_utils.py
forecasting-tools/forecasting_tools/: __init__.py
forecasting-tools/forecasting_tools/agents_and_tools/: minor_tools.py
forecasting-tools/forecasting_tools/ai_models/: agent_wrappers.py  exa_searcher.py  general_llm.py  model_tracker.py
forecasting-tools/forecasting_tools/front_end/: Home.py
forecasting-tools/front_end/: Home.py  saved_chats.json
forecasting-tools/scripts/: forecast_report_displayer.py  generate_bot_costs_csv.py  interesting_forecast_finder.py  run_benchmarker.py  run_higher_model_evaluation.py  run_key_factors.py  run_optimizer.py  run_question_snapshots.py  simulate_a_tournament.ipynb
(+184 files in other folders)
